tests/vertical-slice/reject/ambiguous_module.hew
import ambig_mod;

fn main() -> i64 { 0 }
